fix: update word wrap for code blocks

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,3 +1,6 @@
+* {
+  word-wrap: normal;
+}
 html,
 body,
 #__next {
@@ -33,8 +36,13 @@ body,
     white-space: pre;
   }
 
+  .token {
+    word-wrap: normal;
+  }
+
   .token-line {
     overflow-wrap: break-word;
+    display: block;
     white-space: pre;
     word-wrap: unset;
     padding-inline-start: var(--chakra-space-5);
